# nvalchemi-toolkit

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.claude/skills/: README.md
.claude/skills/nvalchemi-data-storage/: SKILL.md
.claude/skills/nvalchemi-data-structures/: SKILL.md
.claude/skills/nvalchemi-dynamics-api/: SKILL.md
.claude/skills/nvalchemi-dynamics-hooks/: SKILL.md
.claude/skills/nvalchemi-dynamics-implementation/: SKILL.md
.claude/skills/nvalchemi-fine-tuning/: SKILL.md
.claude/skills/nvalchemi-loss-api/: SKILL.md
.claude/skills/nvalchemi-model-wrapping/: SKILL.md
.claude/skills/nvalchemi-reporting/: SKILL.md
.claude/skills/nvalchemi-training-api/: SKILL.md
.claude/skills/nvalchemi-zarr-perf/: SKILL.md
.licenses/: README.md  generate_licenses.sh  license-overrides.json  summary.md  version-pins.txt
benchmark/distributed/: README.md  _benchmark_common.py  benchmark_dd_model_forward.py  benchmark_dd_nvt.py
benchmark/distributed/configs/: aimnet2.yaml  ewald.yaml  lj.yaml  mace.yaml  pme.yaml  uma.yaml
docs/: conf.py  sphinxext.py
docs/models/: index.md
docs/modules/: data.rst  hooks.rst  models.rst
docs/modules/dynamics/: api.rst  hooks.rst
docs/modules/training/: checkpoints.rst  finetuning.rst  hooks.rst  index.rst  losses.rst  strategy.rst  validation.rst
docs/userguide/: agent_skills.md  data.md  datapipes.md  distributed.md  distributed_byo.md  distributed_design.md  distributed_shardtensor.md  distributed_training.md  dynamics.md  finetuning.md  hooks.md  index.md  losses.md  models.md  reporting.md  training.md  zarr_compression.md
examples/: analyze_dd_debug.py  distributed_lj_nve.py  distributed_mace_nve.py  validate_dd_energy.py  validate_dd_forces.py
examples/advanced/: 09_uma_nve.py  README.rst  uma_nve.py
examples/distributed/: 01_distributed_pipeline.py  02_distributed_monitoring.py  03_mace_nvt_distributed.py  04_byo_pytorch_mpnn.py  05_byo_graph_transformer.py  README.rst
nvalchemi/: __init__.py  _optional.py  _serialization.py  _typing.py  distributed.py  neighbors.py
nvalchemi/data/: atomic_data.py  batch.py  data.py  io_test.py  level_storage.py
nvalchemi/data/datapipes/: __init__.py  dataloader.py  dataset.py  multidataset.py  samplers.py
nvalchemi/distributed/: __init__.py  _dynamics_coordinator.py  atom_migrator.py  compile_bridge.py  compile_refresh.py  config.py  distributed_model.py  distributed_pipeline.py  domain_parallel.py  ghost_exchanger.py  graph_padder.py  helpers.py  ops.py  output_consolidation.py  output_kinds.py  partitioner.py  sharded_batch.py  spec.py  strategy.py
nvalchemi/distributed/_core/: adapter.py  compile_routing.py  gather_primitives.py  shard_tensor.py  spec.py  storage_policy.py
nvalchemi/distributed/validate/: __init__.py  autofix.py  halo_diagnostics.py  inference.py  layer_diagnostics.py  payloads.py  reference.py  scripted_diagnostics.py  types.py  worker.py
nvalchemi/dynamics/: __init__.py  _units.py  base.py  sampler.py
nvalchemi/dynamics/_ops/: __init__.py  _bridge.py  cell_align.py  nose_hoover.py  npt_nph.py  thermostat_utils.py
nvalchemi/dynamics/hooks/: __init__.py  cell_align.py  logging.py  monitors.py  profiling.py  safety.py  snapshot.py
nvalchemi/dynamics/integrators/: nph.py  npt.py  nve.py  nvt_langevin.py  nvt_nose_hoover.py
nvalchemi/dynamics/optimizers/: fire.py  fire2.py
nvalchemi/hooks/: __init__.py  _context.py  _protocol.py  _registry.py  neighbor_list.py  physicsnemo_profiling.py  stage_timing.py
nvalchemi/hooks/reporting/: __init__.py  _distributed.py  _orchestrator.py  _protocol.py  _rich.py  _scalars.py  _state.py  _tensorboard.py
nvalchemi/models/: __init__.py  _utils.py  aimnet2.py  base.py  dftd3.py  ewald.py  lj.py  mace.py  pipeline.py  pme.py  uma.py
nvalchemi/models/_ops/: lj.py
nvalchemi/training/: __init__.py  _checkpoint.py  _spec.py  _spec_utils.py  _stages.py  _validation.py  cli.py  distributed.py  finetune.py  optimizers.py  runtime.py  strategy.py
nvalchemi/training/hooks/: __init__.py  checkpoint.py  ddp.py  ema.py  (+3 more)
test/: test_optional.py
test/_license/: config.json
test/data/: test_atomic_data.py  test_batch.py  test_data_mixin.py  test_io_test.py  test_multidataset_samplers.py  test_reader_base.py  test_zarr_datapipe.py
test/distributed/: _gloo_harness.py  _helpers.py  _toy_gnn.py  conftest.py  test_atom_migrator.py  test_byo_examples_acceptance.py  test_compile_refresh.py  test_config.py  test_dd_context_helpers.py  test_dd_force_accuracy.py  test_domain_parallel.py  test_ghost_exchanger.py  test_global_thermo.py  test_graph_padder.py  test_init.py  test_no_attribute_injection.py  test_output_kinds.py  test_partition_health.py  test_public_api_stability.py  test_shard_fields.py  test_sharded_batch.py  test_spatial_partitioner.py  test_spec_serialization.py  test_strategy.py
test/dynamics/: test_base.py  test_bias_hook.py  test_cell_align.py  test_distributed_correctness.py  test_freeze_hook.py  test_inflight.py  test_npt_nph.py  test_observer_hooks.py  test_ops.py  test_periodic_hook.py  test_profiler_hook.py  test_sampler.py  test_single_loop.py  test_state_management.py
test/hooks/: test_context.py  test_neighbor_list_hook.py  test_physicsnemo_profiler_hook.py  test_reporting.py  test_reporting_rich.py  test_reporting_scalars.py  test_reporting_tensorboard.py  test_shared_hooks.py  test_stage_timing_hook.py
test/models/: test_aimnet2.py  test_base.py  test_composable.py  test_dftd3.py  test_ewald.py  test_ewald_staged_bindings.py  test_lj_model.py  test_mace.py  test_pipeline.py  test_pme.py  test_uma.py  test_uma_equivalence.py  test_uma_nve_stability.py
test/training/: conftest.py  test_checkpoint.py  test_checkpoint_hook.py  test_ddp_hook.py  test_ema_hook.py  test_finetune.py  test_losses.py  test_mixed_precision.py  test_optimizers.py  test_spec.py  test_stages.py  test_strategy.py  test_strategy_validate.py  test_training_cli.py  test_training_update_orchestrator.py  test_validation_config.py  test_validation_loop.py  test_validation_loop_distributed.py
(+83 files in other folders)
